# ausdex

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  advantage.html  citation.html  cli.html  conftest.py  contributing.html  credits.html  data_viz.html  demo.ipynb  genindex.html  index.html  inflation.html  installation.html  make_test_config.sh  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  quickstart.html  reference.html  search.html  searchindex.js  seifa_vic.html  seifa_vic.ipynb  visualization.html  visualization.ipynb
.doctrees/: advantage.doctree  citation.doctree  cli.doctree  contributing.doctree  credits.doctree  data_viz.doctree  environment.pickle  index.doctree  inflation.doctree  installation.doctree  quickstart.doctree  reference.doctree  seifa_vic.doctree
.doctrees/nbsphinx/: seifa_vic.ipynb
.github/workflows/: coverage.yml  docs.yml  extras.yml  joss-draft-pdf.yml  pipeline.yml  testing.yml
_sources/: advantage.md.txt  cli.rst.txt  credits.md.txt  index.rst.txt  inflation.md.txt  installation.md.txt  quickstart.md.txt  reference.rst.txt  seifa_vic.ipynb.txt  visualization.ipynb.txt
aucpi/: __init__.py  aucpi.py  files.py  main.py
aucpi/seifa_vic/: __init__.py  data_io.py  data_wrangling.py  download_data.py  seifa_vic.py
ausdex/: __init__.py  data_viz.py  dates.py  files.py  gis_utils.py  inflation.py  location.py  main.py  viz.py
ausdex/seifa_vic/: __init__.py  data_io.py  data_wrangling.py  seifa_vic.py
ausdex/seifa_vic/metadata/: victorian_locations.csv
coverage/: aucpi___init___py.html  aucpi_aucpi_py.html  aucpi_files_py.html  aucpi_main_py.html  aucpi_seifa_vic___init___py.html  aucpi_seifa_vic_data_io_py.html  aucpi_seifa_vic_data_wrangling_py.html  aucpi_seifa_vic_preprocess_data_py.html  aucpi_seifa_vic_seifa_vic_py.html  ausdex___init___py.html  ausdex_data_viz_py.html  ausdex_dates_py.html  ausdex_files_py.html  ausdex_gis_utils_py.html  ausdex_inflation_py.html  ausdex_location_py.html  ausdex_main_py.html  ausdex_seifa_vic___init___py.html  ausdex_seifa_vic_data_io_py.html  ausdex_seifa_vic_data_wrangling_py.html  ausdex_seifa_vic_seifa_vic_py.html  ausdex_viz_py.html  index.html  status.json
docs/: citation.md  conf.py  data_viz.ipynb  index.rst  installation.md  quickstart.md  reference.rst  seifa_vic.ipynb
notebooks/: combining seifa data.ipynb  notebook_script_version.py  ozdex_datavis_for_paper.ipynb  testing.ipynb
tests/: test_aucpi.py  test_dates.py  test_files.py  test_inflation.py  test_main.py  test_seifa_vic.py  test_viz.py
tests/testdata/: .gitignore
tests/testdata/aucpi/: seifa_suburb_2011.xls  seifa_suburb_2016.xls
tests/testdata/aucpi/mock_gis/: seifa_1986_aurin.geojson  seifa_1991_aurin.geojson  seifa_1996_aurin.geojson  seifa_2001_aurin.geojson  seifa_2006.geojson  seifa_suburb_2011.xls  seifa_suburb_2016.xls  victoria_councils.geojson  victoria_suburbs.geojson
tests/testdata/ausdex/: download.html  seifa_2006_cd.xls  test_cpi_fig.json  test_inflation_fig.json  test_plot_cpi_change.json
tests/testdata/ausdex/mock_gis/: SSC_2011_AUST.csv  aurin_schemas.json  mock_completed.csv  sa1_gis_2011.geojson  sa1_gis_2016.geojson  seifa_1991_aurin.geojson  seifa_1996_aurin.geojson  seifa_2001_aurin.geojson  seifa_2006.geojson  seifa_2006_cd.xls  seifa_2011_sa1.xls  seifa_2016_sa1.xls  seifa_suburb_2016.xlsx  test_cpi_fig.json  test_fig.json  test_inflation_fig.json  test_map.html  test_map.json  victoria_suburbs.geojson
