[tool.poetry]
name = "ausdex"
version = "0.1.4"
description = "An interface for several Australian socio-economic indices."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
appdirs = "^1.4.4"
pandas = "^1.3.2"
openpyxl = {git = "https://github.com/rbturnbull/openpyxl.git", rev = "main"}
xlrd = "^2.0.1"
cached-property = "^1.5.2"
python-dateutil = "^2.8.2"
typer = "^0.3.2"
modin = "^0.10.2"
geopandas = "^0.10.0"
scipy = "^1.7.1"
OWSLib = "^0.25.0"
pygeos = "^0.10.2"
importlib-metadata = "<4.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.2.0"
pytest = "^6.2.4"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ausdex = 'ausdex.main:app'