[tool.poetry]
name = "ausdex"
version = "2.0.0"
description = "A Python package for adjusting Australian dollars for inflation"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>", "Jonathan Garber <jonathan.garber@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rbturnbull/ausdex"
documentation = "https://rbturnbull.github.io/ausdex/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
appdirs = "^1.4.4"
openpyxl = "^3.0.0"
xlrd = "^2.0.1"
cached-property = "^1.5.2"
python-dateutil = "^2.8.2"
typer = "^0.4.0"
plotly = {version = "^5.4.0", optional = true}
kaleido = {version="0.2.1", optional = true}
numpy = "^1.22.0"
pandas = "^2"
modin = {version = "^0.26.1", optional = true}
importlib-metadata = "^7.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.2.0"
pytest = "^6.2.4"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}
black = "^21.10b0"
# sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.poetry.extras]
plotly = ["plotly", "kaleido"]
modin = ["modin"]

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"

[tool.black]
line-length = 120
skip_string_normalization = true

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ausdex = 'ausdex.main:app'